FrontEnd/frontend/src/Components/NavigationItems/NavigationItems.module.css
.NavigationItems{
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-flow: column;
  align-items: center;
  height: 100%;
}

.Upload{
  margin: 10px;
  display: block;
  box-sizing: border-box;
  width: 100%;
  align-items: center;
}

@media (min-width: 500px) {
  .NavigationItems{
    flex-flow: row;
  }
}

